# ncp_mpu_host

./: SBOM.spdx.json  scr
ncp_host/: Makefile  build_ncp_host.py
ncp_host/drivers/gpio/: gpio_driver.c  gpio_driver.h  gpio_ncp_adapter.c  gpio_ncp_adapter.h
ncp_host/drivers/sdio/: Makefile  README.md  mcu_sdio.h  mcu_sdio_drv.c
ncp_host/sdio_driver/: mcu_sdio_drv.c
ncp_host/src/: mpu_bridge_app.c  mpu_bridge_app.h  mpu_bridge_command.c  mpu_bridge_command.h  mpu_bridge_wifi_config.h  ncp_host_app.c  ncp_host_app.h  ncp_host_app.readme  ncp_host_command.c  ncp_host_command.h  ncp_system_command.h
ncp_host/src/ble/: ncp_host_app_ble.c  ncp_host_app_ble.h  ncp_host_app_ble.readme  ncp_host_command_ble.c  ncp_host_command_ble.h
ncp_host/src/ble/matter/: Makefile
ncp_host/src/ble/matter/src/: ncp_bluetooth.h  ncp_matter_ble.c  ncp_matter_ble.h
ncp_host/src/ble/matter/test/: ble_api_test.c
ncp_host/src/ble/service/: bas.c  bas.h  hr.h  hrc.c  hrs.c  ht.h  htc.c  hts.c  service.h
ncp_host/src/common/: ncp_common.c  ncp_common.h
ncp_host/src/common/crc/: crc.c  crc.h  ncp_crc.h  ncp_crc_sw.c
ncp_host/src/common/lpm/: lpm.c  lpm.h
ncp_host/src/common/mbedtls/: mbedtls_common.c  mbedtls_common.h
ncp_host/src/common/mbedtls/host/: key_cert.h  mbedtls_host.c  mbedtls_host.h
ncp_host/src/common/ncp_adapter/: ncp_adapter.h
ncp_host/src/common/ncp_adapter/ncp_intf/: ncp_intf_pm.c  ncp_intf_pm.h
ncp_host/src/common/ncp_adapter/ncp_intf/sdio/: ncp_intf_sdio.c  ncp_intf_sdio.h  sdio.c  sdio.h
ncp_host/src/common/ncp_adapter/ncp_intf/spi/: ncp_intf_spi.c  spi_master.c  spi_master.h
ncp_host/src/common/ncp_adapter/ncp_intf/uart/: ncp_intf_uart.c  ncp_intf_uart.h  uart.c  uart.h
ncp_host/src/common/ncp_adapter/ncp_intf/usb/: ncp_intf_usb.c  ncp_intf_usb.h  usb.c  usb.h
ncp_host/src/common/ncp_adapter/ncp_pm/: ncp_pm.c  ncp_pm.h  ncp_pm_action.c  ncp_pm_action.h  ncp_pm_defs.h  ncp_pm_sm.c  ncp_pm_sm.h
ncp_host/src/common/ncp_adapter/ncp_pm/os/: ncp_pm_linux_host.c  ncp_pm_os.h
ncp_host/src/common/ncp_adapter/ncp_tlv/: ncp_tlv_adapter.c  ncp_tlv_adapter.h
ncp_host/src/common/ncp_cmd_node/: ncp_cmd_node.c  ncp_cmd_node.h
ncp_host/src/common/ncp_debug/: ncp_debug.h
ncp_host/src/common/ncp_log/: ncp_log.c  ncp_log.h
ncp_host/src/common/osa/include/: fsl_common.h  fsl_component_list.h  fsl_os_abstraction.h  fsl_os_abstraction_linux.h
ncp_host/src/common/osa/src/: fsl_component_list.c  fsl_os_abstraction_linux.c
ncp_host/src/ot/: ncp_host_app_ot.c  ncp_host_app_ot.h  ncp_ot_api.c  ncp_ot_api.h  otopcode.h  otopcode_private.h
ncp_host/src/ot/test/: Readme.md
ncp_host/src/ot/test/ot_api/: CMakeLists.txt  build.sh
ncp_host/src/ot/test/ot_api/uc3_ncp_ot_api_with_test/: CMakeLists.txt  uc3_ncp_ot_api_with_test.c
ncp_host/src/system/: ncp_host_app_system.c  ncp_host_command_system.c  ncp_host_command_system.h
ncp_host/src/wifi/: ncp_host_app_wifi.c  ncp_host_app_wifi.h  ncp_host_app_wifi.readme  ncp_host_command_wifi.c  ncp_host_command_wifi.h  ncp_host_wifi_config.h  ncp_wifi_api.c  ncp_wifi_api.h
ncp_host/src/wifi/inet/: ncp_inet.c  ncp_inet.h
ncp_host_ble/: Makefile
ncp_host_ble/sdio_driver/: mcu_sdio.h  mcu_sdio_drv.c
ncp_host_ble/src/: mpu_bridge_app.c  mpu_bridge_app.h  mpu_bridge_app.readme  mpu_bridge_ble_config.h  mpu_bridge_command.c  mpu_bridge_command.h
ncp_host_ble/src/common/crc/: crc.c
ncp_host_ble/src/common/ncp_adapter/ncp_intf/sdio/: ncp_intf_sdio.c  ncp_intf_sdio.h  sdio.c
ncp_host_ble/src/common/ncp_adapter/ncp_intf/spi/: ncp_intf_spi.h  spi_master.c  spi_master.h
ncp_host_ble/src/common/ncp_adapter/ncp_intf/uart/: ncp_intf_uart.c  uart.c  uart.h
ncp_host_ble/src/common/ncp_adapter/ncp_intf/usb/: ncp_intf_usb.c  usb.c  usb.h
ncp_host_ble/src/common/ncp_adapter/ncp_tlv/: ncp_tlv_adapter.c  ncp_tlv_adapter.h
ncp_host_ble/src/service/: bas.c  bas.h  hr.h  hrc.c  hrs.c  ht.h  htc.c  hts.c  service.h
ncp_host_ot/: Makefile  README.md
ncp_host_ot/src/: ot-cli-ncp.c  ot_redefined_cmds.h  otopcode.c  otopcode_private.h
utility/: tcp_server.c
