project("NCP")
set(CMAKE_BUILD_TYPE "Release" CACHE STRING "")
set(OT_PLATFORM "posix" CACHE STRING "")
set(OT_COVERAGE OFF CACHE BOOL "")
set(OT_COMPILE_WARNING_AS_ERROR OFF CACHE BOOL "")
set(OT_DAEMON ON CACHE BOOL "")
set(OT_APP_CLI ON CACHE BOOL "")
set(OT_POSIX_RCP_SPI_BUS ON CACHE BOOL "")
set(OT_THREAD_VERSION "1.4" CACHE STRING "")
set(OT_BACKBONE_ROUTER OFF CACHE BOOL "")
set(OT_LINK_METRICS_INITIATOR ON CACHE BOOL "")
set(OT_MLR ON CACHE BOOL "")
set(OT_DUA ON CACHE BOOL "")
set(OT_LINK_METRICS_SUBJECT ON CACHE BOOL "")
set(OT_RCP_RESTORATION_MAX_COUNT "5" CACHE STRING "")
set(OT_TCP OFF CACHE BOOL "")
set(OPENTHREAD_FTD ON CACHE BOOL "")
set(OT_RCP_TX_WAIT_TIME_SECS "5" CACHE STRING "")
set(OT_PLATFORM_CONFIG "openthread-core-posix-config.h" CACHE STRING "")
set(OT_ANYCAST_LOCATOR OFF CACHE BOOL "")
set(OT_BORDER_AGENT OFF CACHE BOOL "")
set(OT_BORDER_AGENT_ID OFF CACHE BOOL "")
set(OT_BORDER_ROUTER OFF CACHE BOOL "")
set(OT_CHANNEL_MANAGER OFF CACHE BOOL "")
set(OT_CHANNEL_MONITOR OFF CACHE BOOL "")
set(OT_COAP OFF CACHE BOOL "")
set(OT_COAPS OFF CACHE BOOL "")
set(OT_COAP_OBSERVE OFF CACHE BOOL "")
set(OT_COMMISSIONER OFF CACHE BOOL "")
set(OT_COVERAGE OFF CACHE BOOL "")
set(OT_DATASET_UPDATER OFF CACHE BOOL "")
set(OT_DHCP6_CLIENT OFF CACHE BOOL "")
set(OT_DHCP6_SERVER OFF CACHE BOOL "")
set(OT_DIAGNOSTIC OFF CACHE BOOL "")
set(OT_DNSSD_SERVER OFF CACHE BOOL "")
set(OT_DNS_CLIENT OFF CACHE BOOL "")
set(OT_ECDSA OFF CACHE BOOL "")
set(OT_HISTORY_TRACKER OFF CACHE BOOL "")
set(OT_IP6_FRAGM OFF CACHE BOOL "")
set(OT_JAM_DETECTION OFF CACHE BOOL "")
set(OT_JOINER OFF CACHE BOOL "")
set(OT_LOG_LEVEL_DYNAMIC ON CACHE BOOL "")
set(OT_MAC_FILTER OFF CACHE BOOL "")
set(OT_NEIGHBOR_DISCOVERY_AGENT OFF CACHE BOOL "")
set(OT_NETDATA_PUBLISHER OFF CACHE BOOL "")
set(OT_NETDIAG_CLIENT OFF CACHE BOOL "")
set(OT_PING_SENDER OFF CACHE BOOL "")
set(OT_REFERENCE_DEVICE OFF CACHE BOOL "")
set(OT_SERVICE OFF CACHE BOOL "")
set(OT_SNTP_CLIENT OFF CACHE BOOL "")
set(OT_SRP_CLIENT OFF CACHE BOOL "")
set(OT_SRP_SERVER OFF CACHE BOOL "")
set(OT_UPTIME ON CACHE BOOL "")
set(OT_BLE_TCAT OFF CACHE BOOL "")




if(APP_UC1_UDP_CLIENT_SERVER)
	add_subdirectory(uc1_udp_client_server)
	add_subdirectory(${PROJECT_SOURCE_DIR}/openthread ${CMAKE_CURRENT_BINARY_DIR}/openthread)
endif()


if(APP_UDP_CLIENT_SERVER_NCP)
	add_subdirectory(uc2_udp_client_server_ncp)
endif()

if(APP_NCP_OT_API_AND_TEST)
	add_subdirectory(uc3_ncp_ot_api_with_test)
endif()